# DiscoC

./: .gitignore  CMakeLists.txt  README.MD  ROADMAP.MD
.github/workflows/: cmake.yml
cmake/: dos-djgpp.cmake
examples/: loop.dc  loop_opt.dc  math.dc  plot.dc  test_casts.dc
src/: AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp  Analyzer.cpp  Analyzer.hpp  AssemblyGenerator.cpp  AssemblyGenerator.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CompilerError.hpp  DataSegment.cpp  DataSegment.hpp  Lexer.cpp  Lexer.hpp  ObjectFile.cpp  ObjectFile.hpp  Opcodes.hpp  Optimizer.cpp  Optimizer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  TokenType.hpp  Types.hpp  discc.cpp  discld.cpp
